--- a/package.json
+++ b/package.json
@@ -31,5 +31,6 @@
     "@types/react": "^18.2.55",
     "@types/react-dom": "^18.2.19",
     "typescript": "^5.3.3"
-  }
+  },
+   "packageManager": "pnpm@10.22.0"
 }
